--- a/docs/_examples/template/sg_execution_times.html
+++ b/docs/_examples/template/sg_execution_times.html
@@ -87,7 +87,9 @@
 <ul>
 <li class="toctree-l1"><a class="reference internal" href="../../usage/installation.html">Installation</a></li>
 <li class="toctree-l1"><a class="reference internal" href="../../usage/quickstart.html">Quickstart</a></li>
+<li class="toctree-l1"><a class="reference internal" href="../../usage/template.html">Template</a></li>
 <li class="toctree-l1"><a class="reference internal" href="../../usage/widgets.html">Widgets</a></li>
+<li class="toctree-l1"><a class="reference internal" href="../../usage/blender.html">Blender</a></li>
 <li class="toctree-l1"><a class="reference internal" href="../../usage/tips.html">Useful Tips</a></li>
 <li class="toctree-l1"><a class="reference internal" href="../../usage/configuration.html">Configuration</a></li>
 </ul>
@@ -104,6 +106,14 @@
 <li class="toctree-l1"><a class="reference internal" href="../widgets/index.html">The Widget Gallery</a></li>
 <li class="toctree-l1"><a class="reference internal" href="../blender/index.html">The Blender Gallery</a></li>
 <li class="toctree-l1"><a class="reference internal" href="index.html">The Template Gallery</a></li>
+</ul>
+<p class="caption"><span class="caption-text">Development Guide</span></p>
+<ul>
+<li class="toctree-l1"><a class="reference internal" href="../../usage/development.html">Development</a></li>
+</ul>
+<p class="caption"><span class="caption-text">API doc</span></p>
+<ul>
+<li class="toctree-l1"><a class="reference internal" href="../../_apidoc/modules.html">datablend</a></li>
 </ul>
 
             
@@ -171,7 +181,7 @@
             
   <div class="section" id="computation-times">
 <span id="sphx-glr-examples-template-sg-execution-times"></span><h1>Computation times<a class="headerlink" href="#computation-times" title="Permalink to this headline">¶</a></h1>
-<p><strong>00:00.044</strong> total execution time for <strong>_examples_template</strong> files:</p>
+<p><strong>00:00.046</strong> total execution time for <strong>_examples_template</strong> files:</p>
 <table class="docutils align-default">
 <colgroup>
 <col style="width: 81%" />
@@ -184,7 +194,7 @@
 <td><p>0.0 MB</p></td>
 </tr>
 <tr class="row-even"><td><p><a class="reference internal" href="plot_template_01.html#sphx-glr-examples-template-plot-template-01-py"><span class="std std-ref">Fitting a blender template</span></a> (<code class="docutils literal notranslate"><span class="pre">plot_template_01.py</span></code>)</p></td>
-<td><p>00:00.010</p></td>
+<td><p>00:00.012</p></td>
 <td><p>0.0 MB</p></td>
 </tr>
 </tbody>
