--- a/docs/_examples/template/plot_template_02.html
+++ b/docs/_examples/template/plot_template_02.html
@@ -39,7 +39,7 @@
     
     <link rel="index" title="Index" href="../../genindex.html" />
     <link rel="search" title="Search" href="../../search.html" />
-    <link rel="next" title="Development" href="../../usage/development.html" />
+    <link rel="next" title="The OUCRU-06dx case" href="../../usage/oucru06dx.html" />
     <link rel="prev" title="Fitting a blender template" href="plot_template_01.html" /> 
 </head>
 
@@ -95,14 +95,6 @@
 <li class="toctree-l1"><a class="reference internal" href="../../usage/tips.html">Useful Tips</a></li>
 <li class="toctree-l1"><a class="reference internal" href="../../usage/configuration.html">Configuration</a></li>
 </ul>
-<p class="caption"><span class="caption-text">Advanced Usage and Information</span></p>
-<ul>
-<li class="toctree-l1"><a class="reference internal" href="../../usage/advanced.html">Inferring templates from data</a></li>
-<li class="toctree-l1"><a class="reference internal" href="../../usage/advanced.html#fixing-the-data">Fixing the data</a></li>
-<li class="toctree-l1"><a class="reference internal" href="../../usage/advanced.html#data-in-stacked-format">Data in stacked format</a></li>
-<li class="toctree-l1"><a class="reference internal" href="../../usage/advanced.html#data-in-tidy-format">Data in tidy format</a></li>
-<li class="toctree-l1"><a class="reference internal" href="../../usage/advanced.html#further-considerations">Further considerations</a></li>
-</ul>
 <p class="caption"><span class="caption-text">Example Galleries</span></p>
 <ul class="current">
 <li class="toctree-l1"><a class="reference internal" href="../widgets/index.html">The Widget Gallery</a></li>
@@ -112,6 +104,7 @@
 <li class="toctree-l2 current"><a class="current reference internal" href="#">Blender with single input</a></li>
 </ul>
 </li>
+<li class="toctree-l1"><a class="reference internal" href="../../usage/oucru06dx.html">The OUCRU-06dx case</a></li>
 </ul>
 <p class="caption"><span class="caption-text">Development Guide</span></p>
 <ul>
@@ -288,7 +281,7 @@ to download the full example code</p>
   
     <div class="rst-footer-buttons" role="navigation" aria-label="footer navigation">
       
-        <a href="../../usage/development.html" class="btn btn-neutral float-right" title="Development" accesskey="n" rel="next">Next <span class="fa fa-arrow-circle-right"></span></a>
+        <a href="../../usage/oucru06dx.html" class="btn btn-neutral float-right" title="The OUCRU-06dx case" accesskey="n" rel="next">Next <span class="fa fa-arrow-circle-right"></span></a>
       
       
         <a href="plot_template_01.html" class="btn btn-neutral float-left" title="Fitting a blender template" accesskey="p" rel="prev"><span class="fa fa-arrow-circle-left"></span> Previous</a>
