--- a/docs/_examples/template/sg_execution_times.html
+++ b/docs/_examples/template/sg_execution_times.html
@@ -93,19 +93,12 @@
 <li class="toctree-l1"><a class="reference internal" href="../../usage/tips.html">Useful Tips</a></li>
 <li class="toctree-l1"><a class="reference internal" href="../../usage/configuration.html">Configuration</a></li>
 </ul>
-<p class="caption"><span class="caption-text">Advanced Usage and Information</span></p>
-<ul>
-<li class="toctree-l1"><a class="reference internal" href="../../usage/advanced.html">Inferring templates from data</a></li>
-<li class="toctree-l1"><a class="reference internal" href="../../usage/advanced.html#fixing-the-data">Fixing the data</a></li>
-<li class="toctree-l1"><a class="reference internal" href="../../usage/advanced.html#data-in-stacked-format">Data in stacked format</a></li>
-<li class="toctree-l1"><a class="reference internal" href="../../usage/advanced.html#data-in-tidy-format">Data in tidy format</a></li>
-<li class="toctree-l1"><a class="reference internal" href="../../usage/advanced.html#further-considerations">Further considerations</a></li>
-</ul>
 <p class="caption"><span class="caption-text">Example Galleries</span></p>
 <ul>
 <li class="toctree-l1"><a class="reference internal" href="../widgets/index.html">The Widget Gallery</a></li>
 <li class="toctree-l1"><a class="reference internal" href="../blender/index.html">The Blender Gallery</a></li>
 <li class="toctree-l1"><a class="reference internal" href="index.html">The Template Gallery</a></li>
+<li class="toctree-l1"><a class="reference internal" href="../../usage/oucru06dx.html">The OUCRU-06dx case</a></li>
 </ul>
 <p class="caption"><span class="caption-text">Development Guide</span></p>
 <ul>
